--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,11 @@
 		"display-name": "MODx commands",
 		"soft-require": {
 			"phpbb/phpbb": "3.1.*@dev"
-		}
+		},
+        "version-check": {
+            "host": "www.phpbb.com",
+            "directory": "/customise/db/extension/modx_commands",
+            "filename": "version_check"
+        }
 	}
 }
